changed paths to squibbox domain

--- a/SSfMT/Lectures/Introduction to Module.html
+++ b/SSfMT/Lectures/Introduction to Module.html
@@ -22,37 +22,37 @@
 <div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a>, <a href="./../../SSfMT/Lectures/Electronic Music.html">Electronic Music</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.002.png'/><br><b>SuperCollider code</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.003.png'/><br><b>SuperCollider Graphical User Interfaces (GUIs)</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.004.png'/><br><b>Live Coding with SuperCollider</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.005.png'/><br><b>Suzanne Ciani on a Buchla synthesiser</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.006.png'/><br><b>Lots of synths</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.007.png'/><br><b>Klaus Schultze, Electronic Musician - Tangerine Dream</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.008.png'/><br><b>Performance synthesisers: Prophet 8, Minibrute, Nord Lead 4, Korg PS60</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.009.png'/><br><b>Modular synthesiser: Moog Modular</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.010.png'/><br><b>Moog synthesiser modules</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.011.png'/><br><b>Zoom into Moog synthesiser modules</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.012.png'/><br><b>Buchla 200e with patch cords</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.013.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.014.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.015.png'/><br><b>Electronic Components</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.016.png'/><br><b>Mass-string model - wikipedia.org</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.002.png'/><br><b>SuperCollider code</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.003.png'/><br><b>SuperCollider Graphical User Interfaces (GUIs)</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.004.png'/><br><b>Live Coding with SuperCollider</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.005.png'/><br><b>Suzanne Ciani on a Buchla synthesiser</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.006.png'/><br><b>Lots of synths</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.007.png'/><br><b>Klaus Schultze, Electronic Musician - Tangerine Dream</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.008.png'/><br><b>Performance synthesisers: Prophet 8, Minibrute, Nord Lead 4, Korg PS60</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.009.png'/><br><b>Modular synthesiser: Moog Modular</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.010.png'/><br><b>Moog synthesiser modules</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.011.png'/><br><b>Zoom into Moog synthesiser modules</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.012.png'/><br><b>Buchla 200e with patch cords</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.013.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.014.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.015.png'/><br><b>Electronic Components</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.016.png'/><br><b>Mass-string model - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/2/2b/Damped_spring.gif'/><br><b>Underdamped spring–mass system - wikipedia.org</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Circuit.png'/><br><b>Electronic circuit</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Circuit.png'/><br><b>Electronic circuit</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Simple_harmonic_oscillator.gif/100px-Simple_harmonic_oscillator.gif'/><br><b>Oscillator - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/7/74/Simple_harmonic_motion_animation.gif'/><br><b>Harmonic Motion - wikipedia.org</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.017.png'/><br><b>Bicycle wheel - Oscillations</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.017.png'/><br><b>Bicycle wheel - Oscillations</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/e/ea/Simple_Harmonic_Motion_Orbit.gif'/><br><b>Harmonic motion orbit - wikipedia.org</b></div>
 <div class='image'><img src='http://cdn1.askiitians.com/Images/201548-104410177-3862-im-1.gif'/><br><b>Represenation of phase in harmonic motion - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/a/a0/Simple_harmonic_motion_animation_2.gif'/><br><b>Phase difference in harmonic motion - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/8/80/Tuned_circuit_animation_3_300ms.gif'/><br><b>Electronic oscillator - LC circuit - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/1/1a/Fourier_series_square_wave_circles_animation.gif'/><br><b>Representation of odd harmonics (square wave) - wikipedia.org</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.018.png'/><br><b>Analog oscilloscope showing a sine wave</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.019.png'/><br><b>Moog Voltage Controlled Oscillator (VCO)</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.020.png'/><br><b>EMS VCS3</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.018.png'/><br><b>Analog oscilloscope showing a sine wave</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.019.png'/><br><b>Moog Voltage Controlled Oscillator (VCO)</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.020.png'/><br><b>EMS VCS3</b></div>
 
-<p><a href="https://youtu.be/q67zcFBHGYQ">Putney VCS3 - demo 1973</a><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.021.png'/><br><b>VCS3 Interface</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.022.png'/><br><b>VCS3 Controls</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.023.png'/><br><b>EMS Studios in Putney, London</b></div>
+<p><a href="https://youtu.be/q67zcFBHGYQ">Putney VCS3 - demo 1973</a><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.021.png'/><br><b>VCS3 Interface</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.022.png'/><br><b>VCS3 Controls</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture1/Lecture1.023.png'/><br><b>EMS Studios in Putney, London</b></div>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Lectures/Introduction to Module.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Lectures/Introduction to Module.schelp</a><br>link::SSfMT/Lectures/Introduction to Module::<br>sc version: 3.8.0</div></div></body></html>
