--- a/SSfMT/Lectures/Introduction to Programming.html
+++ b/SSfMT/Lectures/Introduction to Programming.html
@@ -22,77 +22,77 @@
 <div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.001.png'/><br><b>CSIR Mk 1 (1951) - csiropedia.csiro.au</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.001.png'/><br><b>CSIR Mk 1 (1951) - csiropedia.csiro.au</b></div>
 
 <p><pre class='code prettyprint lang-sc'>"open http://theconversation.com/how-australia-played-the-worlds-first-music-on-a-computer-60381".unixCmd;</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.002.png'/><br><b>CSIRAC with Trevor Pearcey - computerhistory.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.002.png'/><br><b>CSIRAC with Trevor Pearcey - computerhistory.org</b></div>
 
 <p>Calculate how many years since the first computer produced music. Run the code below by pressing shift+return<pre class='code prettyprint lang-sc'>10.do{((Date.getDate.year - 1951).asString ++ " YEARS OF COMPUTER MUSIC!!!").postln};</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.003.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.003.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.004.png'/><br><b>From Ada: the Enchantress of Numbers (Toole, B., 1998)</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.004.png'/><br><b>From Ada: the Enchantress of Numbers (Toole, B., 1998)</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.005.png'/><br><b>Ada Lovelace - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.005.png'/><br><b>Ada Lovelace - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.006.png'/><br><b>Charles Babbage's plans for the Analytical Engine - computerhistory.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.006.png'/><br><b>Charles Babbage's plans for the Analytical Engine - computerhistory.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.007.png'/><br><b>Only part of the Analytical Engine to be completed in Babbage's life - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.007.png'/><br><b>Only part of the Analytical Engine to be completed in Babbage's life - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.008.png'/><br><b>The Thrilling Adventures of Lovelace and Babbage by Sydney Padua</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.008.png'/><br><b>The Thrilling Adventures of Lovelace and Babbage by Sydney Padua</b></div>
 
 <p><pre class='code prettyprint lang-sc'>"open http://sydneypadua.com/2dgoggles/the-book/".unixCmd;</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.009.png'/><br><b>A Jacquard Loom - addiator.blogspot.co.uk</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.009.png'/><br><b>A Jacquard Loom - addiator.blogspot.co.uk</b></div>
 
 <p><pre class='code prettyprint lang-sc'>"open https://youtu.be/OlJns3fPItE".unixCmd;
 "open https://youtu.be/shh1F6MgjV4".unixCmd;</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.010.png'/><br><b>Reconstruction of Difference Engine 2 by Science Museum (1984-2002) - computerhistory.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.010.png'/><br><b>Reconstruction of Difference Engine 2 by Science Museum (1984-2002) - computerhistory.org</b></div>
 
 <p><pre class='code prettyprint lang-sc'>"open https://youtu.be/KBuJqUfO4-w".unixCmd; //short documentary on Difference Engine</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.011.png'/><br><b>Konrad Zuse's Z3 electro-mechanical computer (1941) - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.011.png'/><br><b>Konrad Zuse's Z3 electro-mechanical computer (1941) - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.012.png'/><br><b>Colossus Computer (1943) by Tommy Flowers- wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.012.png'/><br><b>Colossus Computer (1943) by Tommy Flowers- wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.013.png'/><br><b>Harwell CADET (1953) - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.013.png'/><br><b>Harwell CADET (1953) - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.014.png'/><br><b>Die of Intel Pentium P54C - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.014.png'/><br><b>Die of Intel Pentium P54C - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.015.png'/><br><b>Binary Code</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.015.png'/><br><b>Binary Code</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.016.png'/><br><b>IBM 704 - cs.princeton.edu</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.016.png'/><br><b>IBM 704 - cs.princeton.edu</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.017.png'/><br><b>IBM 704 Operator Console - computer-history.info</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.017.png'/><br><b>IBM 704 Operator Console - computer-history.info</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.018.png'/><br><b>IBM 704 in use - flickr.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.018.png'/><br><b>IBM 704 in use - flickr.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.019.png'/><br><b>Die of Core Memory ca. 1965 - uh.edu</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.019.png'/><br><b>Die of Core Memory ca. 1965 - uh.edu</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.020.png'/><br><b>ENIAC programmers ca. 1946 - computerhistory.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.020.png'/><br><b>ENIAC programmers ca. 1946 - computerhistory.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.021.png'/><br><b>Programming the IBM 650 - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.021.png'/><br><b>Programming the IBM 650 - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.022.png'/><br><b>FORTRAN - blogspot.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.022.png'/><br><b>FORTRAN - blogspot.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.023.png'/><br><b>FORTRAN - blogspot.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.023.png'/><br><b>FORTRAN - blogspot.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture3/lecture3.001.png'/><br><b>Assembly Code - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture3/lecture3.001.png'/><br><b>Assembly Code - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture3/lecture3.002.png'/><br><b>Machine Code in monitor - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture3/lecture3.002.png'/><br><b>Machine Code in monitor - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture3/lecture3.003.png'/><br><b>Compiler and Assembler - what-when-how.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture3/lecture3.003.png'/><br><b>Compiler and Assembler - what-when-how.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.024.png'/><br><b>C code - googleapis.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.024.png'/><br><b>C code - googleapis.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.025.png'/><br><b>Python code - irawd.wordpress.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.025.png'/><br><b>Python code - irawd.wordpress.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.026.png'/><br><b>SuperCollider code - warwick.ac.uk</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.026.png'/><br><b>SuperCollider code - warwick.ac.uk</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.027.png'/><br><b>SuperCollider GUI - supercollider.github.io</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.027.png'/><br><b>SuperCollider GUI - supercollider.github.io</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.028.png'/><br><b>Live Coding in SuperCollider - lighthouse.org.uk</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.028.png'/><br><b>Live Coding in SuperCollider - lighthouse.org.uk</b></div>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Lectures/Introduction to Programming.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Lectures/Introduction to Programming.schelp</a><br>link::SSfMT/Lectures/Introduction to Programming::<br>sc version: 3.8.0</div></div></body></html>
