--- a/SSfMT/Practicals/Modular Synthesis 1.html
+++ b/SSfMT/Practicals/Modular Synthesis 1.html
@@ -27,11 +27,11 @@
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Download'>Download</a></h2>
 
 <p>Follow this link to download the slides:
-<p><a href="http://www.federicoreuben.com/SSfMT/Practicals/ModularSynthesis1.pdf">Download Slides</a><h3><a class='anchor' name='SuperCollider%20IDE'>SuperCollider IDE</a></h3>
+<p><a href="http://www.squib-box.com/fr/SSfMT/Practicals/ModularSynthesis1.pdf">Download Slides</a><h3><a class='anchor' name='SuperCollider%20IDE'>SuperCollider IDE</a></h3>
 
 <p>If from SuperCollider IDE, then you will have to follow the instructions below.
-<p>If you are on a Mac or Linux, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 1.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"open http://www.federicoreuben.com/SSfMT/Practicals/ModularSynthesis1.pdf".unixCmd;</pre>
+<p>If you are on a Mac or Linux, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 1.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"open http://www.squib-box.com/fr/SSfMT/Practicals/ModularSynthesis1.pdf".unixCmd;</pre>
 
-<p>If you are on Windows, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 1.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"start http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 1.pdf".unixCmd;</pre>
+<p>If you are on Windows, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 1.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"start http://www.squib-box.com/fr/SSfMT/Practicals/Modular Synthesis 1.pdf".unixCmd;</pre>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Practicals/Modular Synthesis 1.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Practicals/Modular Synthesis 1.schelp</a><br>link::SSfMT/Practicals/Modular Synthesis 1::<br>sc version: 3.8.0</div></div></body></html>
