--- a/SSfMT/Tasks/Task 4.html
+++ b/SSfMT/Tasks/Task 4.html
@@ -29,7 +29,7 @@
 <p>Read Chapter 1 (pp. 1-24) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS21208180100001381">Computer Music: Synthesis, Composition, and Performance</a> (Dodge &amp; Jerse 1997).<h3><a class='anchor' name='SuperCollider%20IDE'>SuperCollider IDE</a></h3>
 
 <p>If from SuperCollider IDE, follow the instructions below.
-<p>If you are on a Mac or Linux, evaluate the following line of code:<pre class='code prettyprint lang-sc'>"open http://www.federicoreuben.com/SSfMT/Tasks/FundamentalsOfComputerMusic.pdf".unixCmd;</pre>
+<p>If you are on a Mac or Linux, evaluate the following line of code:<pre class='code prettyprint lang-sc'>"open http://www.squib-box.com/fr/SSfMT/Tasks/FundamentalsOfComputerMusic.pdf".unixCmd;</pre>
 
-<p>If you are on Windows, evaluate the following line of code:<pre class='code prettyprint lang-sc'>"start http://www.federicoreuben.com/SSfMT/Tasks/FundamentalsOfComputerMusic.pdf".unixCmd;</pre>
+<p>If you are on Windows, evaluate the following line of code:<pre class='code prettyprint lang-sc'>"start http://www.squib-box.com/fr/SSfMT/Tasks/FundamentalsOfComputerMusic.pdf".unixCmd;</pre>
 <div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 4.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 4.schelp</a><br>link::SSfMT/Tasks/Task 4::<br>sc version: 3.8.0</div></div></body></html>
